syntax = "proto3";

package vmr;

option java_package = "com.anhvan.vmr.proto";

import "vmr/common.proto";

// Friend services
service FriendService {
  rpc GetFriendList(Empty) returns (FriendListResponse);
  rpc GetChatFriendList(Empty) returns (FriendListResponse);
  rpc QueryUser(UserListRequest) returns (UserListResponse);
  rpc ClearUnreadMessage(ClearUnreadMessageRequest) returns (ClearUnreadMessageResponse);
  rpc SetFriendStatus(SetFriendStatusRequest) returns (SetFriendStatusResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

// Get user info
message GetUserInfoRequest {
  int64 user_id = 1;
}

message GetUserInfoResponse {
  Error error = 1;
  UserResponse user = 2;
}

// Get friend list
message FriendListResponse {
  Error error = 1;
  repeated FriendInfo friend_info = 2;
}

message FriendInfo {
  int64 id = 1;
  string username = 2;
  string name = 3;
  bool online = 4;
  string last_message = 5;
  string last_message_type = 6;
  int64 last_message_sender = 7;
  int64 last_message_timestamp = 8;
  int64 num_unread_message = 9;
  FriendStatus friend_status = 10;
}

// Get user list (find friend)
message UserListRequest {
  string query_string = 1;
}

message UserListResponse {
  Error error = 1;
  repeated UserResponse user = 2;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string name = 3;
  FriendStatus friend_status = 4;
}

enum FriendStatus {
  FRIEND = 0;
  WAITING = 1;
  NOT_ANSWER = 2;
  NOTHING = 3;
  REMOVED = 4;
  UNFRIENDED = 5;
}

// Clear unread message
message ClearUnreadMessageRequest {
  int64  friend_id = 1;
}

message ClearUnreadMessageResponse {
  Error error = 1;
}

// Set friend status
message SetFriendStatusRequest {
  enum Type {
    ADD_FRIEND = 0;
    ACCEPT_FRIEND = 1;
    REJECT_FRIEND = 2;
    REMOVE_FRIEND = 3;
  }

  Type type = 1;
  int64 friend_id = 2;
}

message SetFriendStatusResponse {
  Error error = 1;
}
