syntax = "proto3";

package vmr;

option java_package = "com.anhvan.vmr.proto";

import "vmr/error.proto";

service UserService {
  rpc QueryUser(UserListRequest) returns (UserListResponse) {}
}

message UserListRequest {
  string query_string = 1;
}

enum FriendStatus {
  FRIEND = 0;
  WAITING = 1;
  NOT_ANSWER = 2;
  NOTHING = 3;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string name = 3;
  FriendStatus friendStatus = 4;
}

message UserListResponse {
  Error error = 1;
  repeated UserResponse user = 2;
}